src/yini_test/cases/golden/lenient/valid/concatenation/string-plus-number.yini
@yini

^ Concat
label = "port-" + 8080
hexLabel = "hex-" + 0xFF
