src/yini_test/cases/golden/lenient/invalid/concatenation/number-plus-string.yini
@yini

^ Concat
value = 8080 + " is the port"
